flutter_package/lib/src/bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Raw FFI bindings generated from MathSDK's public C ABI. Do not edit — regenerate with `dart run ffigen` whenever native/include/mathsdk/math_sdk.h changes.
class MathSdkBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MathSdkBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MathSdkBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> math_sdk_version() {
    return _math_sdk_version();
  }

  late final _math_sdk_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'math_sdk_version');
  late final _math_sdk_version =
      _math_sdk_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  MathSdkStatus math_sdk_evaluate(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_evaluate(
      expression,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_evaluatePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_evaluate');
  late final _math_sdk_evaluate = _math_sdk_evaluatePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_evaluate_steps(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_steps,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_evaluate_steps(
      expression,
      out_result,
      out_steps,
      out_error,
    ));
  }

  late final _math_sdk_evaluate_stepsPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_evaluate_steps');
  late final _math_sdk_evaluate_steps = _math_sdk_evaluate_stepsPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_substitute(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Char> variable,
    ffi.Pointer<ffi.Char> value,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_substitute(
      expression,
      variable,
      value,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_substitutePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_substitute');
  late final _math_sdk_substitute = _math_sdk_substitutePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_evaluate_numeric(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Double> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_evaluate_numeric(
      expression,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_evaluate_numericPtr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Double>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'math_sdk_evaluate_numeric');
  late final _math_sdk_evaluate_numeric =
      _math_sdk_evaluate_numericPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_derivative(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Char> variable,
    int order,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_derivative(
      expression,
      variable,
      order,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_derivativePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_derivative');
  late final _math_sdk_derivative = _math_sdk_derivativePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_solve(
    ffi.Pointer<ffi.Char> equation,
    ffi.Pointer<ffi.Char> variable,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_solve(
      equation,
      variable,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_solvePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_solve');
  late final _math_sdk_solve = _math_sdk_solvePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_solve_linear_system(
    ffi.Pointer<ffi.Char> equations,
    ffi.Pointer<ffi.Char> variables,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_solve_linear_system(
      equations,
      variables,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_solve_linear_systemPtr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'math_sdk_solve_linear_system');
  late final _math_sdk_solve_linear_system =
      _math_sdk_solve_linear_systemPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_limit(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Char> variable,
    ffi.Pointer<ffi.Char> target,
    int direction,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_limit(
      expression,
      variable,
      target,
      direction,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_limitPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_limit');
  late final _math_sdk_limit = _math_sdk_limitPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_integral(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Char> variable,
    ffi.Pointer<ffi.Char> lower_bound,
    ffi.Pointer<ffi.Char> upper_bound,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_integral(
      expression,
      variable,
      lower_bound,
      upper_bound,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_integralPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_integral');
  late final _math_sdk_integral = _math_sdk_integralPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_series(
    ffi.Pointer<ffi.Char> expression,
    ffi.Pointer<ffi.Char> variable,
    ffi.Pointer<ffi.Char> around_point,
    int order,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_series(
      expression,
      variable,
      around_point,
      order,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_seriesPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_series');
  late final _math_sdk_series = _math_sdk_seriesPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_matrix_op(
    ffi.Pointer<ffi.Char> operation,
    ffi.Pointer<ffi.Char> matrix_a,
    ffi.Pointer<ffi.Char> matrix_b,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_matrix_op(
      operation,
      matrix_a,
      matrix_b,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_matrix_opPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('math_sdk_matrix_op');
  late final _math_sdk_matrix_op = _math_sdk_matrix_opPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  MathSdkStatus math_sdk_ode_solve_separable(
    ffi.Pointer<ffi.Char> f_of_x,
    ffi.Pointer<ffi.Char> g_of_y,
    ffi.Pointer<ffi.Char> x_variable,
    ffi.Pointer<ffi.Char> y_variable,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return MathSdkStatus.fromValue(_math_sdk_ode_solve_separable(
      f_of_x,
      g_of_y,
      x_variable,
      y_variable,
      out_result,
      out_error,
    ));
  }

  late final _math_sdk_ode_solve_separablePtr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'math_sdk_ode_solve_separable');
  late final _math_sdk_ode_solve_separable =
      _math_sdk_ode_solve_separablePtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  void math_sdk_free_string(
    ffi.Pointer<ffi.Char> value,
  ) {
    return _math_sdk_free_string(
      value,
    );
  }

  late final _math_sdk_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'math_sdk_free_string');
  late final _math_sdk_free_string = _math_sdk_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

enum MathSdkStatus {
  MATHSDK_STATUS_OK(0),
  MATHSDK_STATUS_INVALID_ARGUMENT(1),
  MATHSDK_STATUS_PARSE_ERROR(2),
  MATHSDK_STATUS_DIVISION_BY_ZERO(3),
  MATHSDK_STATUS_DOMAIN_ERROR(4),
  MATHSDK_STATUS_NOT_IMPLEMENTED(5),
  MATHSDK_STATUS_INTERNAL_ERROR(100);

  final int value;
  const MathSdkStatus(this.value);

  static MathSdkStatus fromValue(int value) => switch (value) {
        0 => MATHSDK_STATUS_OK,
        1 => MATHSDK_STATUS_INVALID_ARGUMENT,
        2 => MATHSDK_STATUS_PARSE_ERROR,
        3 => MATHSDK_STATUS_DIVISION_BY_ZERO,
        4 => MATHSDK_STATUS_DOMAIN_ERROR,
        5 => MATHSDK_STATUS_NOT_IMPLEMENTED,
        100 => MATHSDK_STATUS_INTERNAL_ERROR,
        _ => throw ArgumentError("Unknown value for MathSdkStatus: $value"),
      };
}
